@@ -4,6 +4,8 @@ inMenu: true
 ---
 h2. RSpec on Rails - Specifying Helpers
 
+Helper Specs live in $RAILS_ROOT/spec/helpers/.
+
 Writing specs for your helpers is a snap. Just tell the context the name of the
 helper ...
 
