@@ -6,6 +6,7 @@ require 'spec/runner/execution_context'
 require 'spec/runner/context_runner'
 require 'spec/runner/option_parser'
 require 'spec/runner/command_line'
+require 'spec/runner/drb_command_line'
 require 'spec/runner/backtrace_tweaker'
 require 'spec/runner/reporter'
 require 'spec/runner/spec_matcher'
